--- a/src/templates/mun_obr/vue/tabs/tab2.html
+++ b/src/templates/mun_obr/vue/tabs/tab2.html
@@ -9,7 +9,7 @@
     </div>
   <!--Процент заполнения end-->
 
-    <form v-on:submit.prevent="onSubmit" ref="my_input">
+    <form v-on:submit.prevent="onSubmit" id="form_contract" ref="my_input">
 
   <p class="text-center main_label"><b>Банковские реквизиты</b></p>
   <label for="exampleInputEmail1"><h6 class="control-label">Расчетный счет</h6> <p style="margin-bottom: -10px; margin-top: -5px;">Укажите 20-значный номер счета для получения гранта</p></label>
