--- a/src/templates/mun_obr/vue/index.html
+++ b/src/templates/mun_obr/vue/index.html
@@ -53,7 +53,7 @@
 
 <body class="body fonts">
  
-
+  {% include "mun_obr/vue/modals.html"%}
 
   {% csrf_token %}
   {% verbatim %}
@@ -99,7 +99,7 @@
 
                     {% endverbatim %}
 
-                    {% include "mun_obr/vue/moderator.html"%}
+                    {% include "mun_obr/vue/moderator/moderator.html"%}
         
                     {% verbatim %}
 
@@ -114,7 +114,7 @@
 
                   <div class="tab-pane fade" id="v-pills-main" role="tabpanel" aria-labelledby="v-pills-main-tab">
                     <!--main-->
-                    <form>
+                    
                     
                     <!--Список проектов-->
                     {% endverbatim %}
@@ -124,7 +124,7 @@
                     {% verbatim %}
                     <!--Список проектов кон-->
                     
-                    </form>
+                    
                   
                   <!--end main-->
                   </div>
