--- a/src/templates/mun_obr/vue/projects_list_tabs/tab2.html
+++ b/src/templates/mun_obr/vue/projects_list_tabs/tab2.html
@@ -4,13 +4,13 @@
   <p class="text-center main_label"><b>Банковские реквизиты</b></p>
   <label for="exampleInputEmail1"><h6 class="control-label">Расчетный счет</h6> <p style="margin-bottom: -10px; margin-top: -5px;">Укажите 20-значный номер счета для получения гранта</p></label>
   
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input0" v-model="contract_json.c_checking_account" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input0" v-model="contract_json.c_checking_account">
  
   <label for="exampleInputEmail1" class="control-label">Банковский идентификационный код (БИК)</label>
-  <input type="number" class="form-control" placeholder="Введите данные" value="" id="input1" v-model="contract_json.c_bik" required>
+  <input type="number" class="form-control" placeholder="Введите данные" value="" id="input1" v-model="contract_json.c_bik">
  
   <label for="exampleInputEmail1" class="control-label">Название банка</label>
-  <input type="number" class="form-control" placeholder="Введите данные" value="" id="input2" v-model="contract_json.c_bank_name" required>
+  <input type="number" class="form-control" placeholder="Введите данные" value="" id="input2" v-model="contract_json.c_bank_name">
  
   <label for="exampleInputEmail1">Корреспондентский счет</label>
   <input type="text" class="form-control" placeholder="Введите данные" value="" id="input3" v-model="contract_json.c_correspondent_account">
@@ -31,25 +31,25 @@
   
  
   <label for="exampleInputEmail1" class="control-label">ОГРН</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input5" v-model="contract_json.c_ogrn" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input5" v-model="contract_json.c_ogrn">
  
   <label for="exampleInputEmail1" class="control-label">Полное наименование организации</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input6" v-model="contract_json.c_full_org_name" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input6" v-model="contract_json.c_full_org_name">
  
   <label for="exampleInputEmail1">Сокращенное наименование организации</label>
   <input type="text" class="form-control" placeholder="Введите данные" value="" id="input7" v-model="contract_json.c_short_org_name">
  
   <label for="exampleInputEmail1" class="control-label">Юридический адрес</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input8" v-model="contract_json.c_jur_adress" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input8" v-model="contract_json.c_jur_adress">
  
   <label for="exampleInputEmail1" class="control-label">Фактический адрес</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input9" v-model="contract_json.c_fact_adress" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input9" v-model="contract_json.c_fact_adress">
  
   <label for="exampleInputEmail1" class="control-label">ИНН</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input10" v-model="contract_json.c_inn" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input10" v-model="contract_json.c_inn">
 
   <label for="exampleInputEmail1" class="control-label">КПП</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input11" v-model="contract_json.c_kpp" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input11" v-model="contract_json.c_kpp">
 
   <label for="exampleInputEmail1" >Телефон</label>
   <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="contract_json.c_tel">
@@ -60,19 +60,19 @@
   <p class="text-center main_label"><b>Лицо, подписывающее документ</b></p>
 
   <label for="exampleInputEmail1" class="control-label">Фамилия</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="contract_json.c_f_name" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="contract_json.c_f_name">
   
   <label for="exampleInputEmail1" class="control-label">Имя</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="contract_json.c_s_name" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="contract_json.c_s_name">
 
   <label for="exampleInputEmail1" class="control-label">Отчество</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="contract_json.c_m_name" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="contract_json.c_m_name">
 
   <label for="exampleInputEmail1" class="control-label">Должность</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="contract_json.c_position" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="contract_json.c_position">
 
   <label for="exampleInputEmail1" class="control-label">Действует на основании</label>
-  <select class="form-select" aria-label="Default select example"  v-model="contract_json.c_operates_on_the_basis" required>
+  <select class="form-select" aria-label="Default select example"  v-model="contract_json.c_operates_on_the_basis">
     
     <option selected disabled value="">Выберите один из вариантов</option>
     <option value="1">Устава</option>
@@ -85,11 +85,11 @@
   <input style="margin-top: 2px;" type="file" class="form-control" placeholder="Введите данные" value="" id="c_pdf_file" @change="uploadFile" ref="file">
   
   <label for="exampleInputEmail1" class="control-label">Наименование документа в родительном падеже</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="contract_json.c_pdf_file_name" required>
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="contract_json.c_pdf_file_name">
 
 
   <label for="exampleInputEmail1" class="control-label">Заявка</label>
-  <select class="form-select" aria-label="Default select example"  required v-model="contract_json.c_statement">
+  <select class="form-select" aria-label="Default select example"  v-model="contract_json.c_statement">
     
     <option selected disabled value="">Выберите один из вариантов</option>
     <option v-for="item in statements" v-bind:value="item.id">
