--- a/src/templates/mun_obr/vue/profiles.html
+++ b/src/templates/mun_obr/vue/profiles.html
@@ -27,7 +27,7 @@
 
     <label for="exampleInputEmail1">Банковские реквизиты</label>
     <input type="text" class="form-control" placeholder="Введите данные" v-model="profile_json.bank_data">
-
+    <button type="button" style="margin-top:2%" class="btn btn-primary" v-on:click="update_profile">Изменить</button>
     
 {% endverbatim %} 
 
