--- a/src/templates/mun_obr/vue/modals.html
+++ b/src/templates/mun_obr/vue/modals.html
@@ -1,11 +1,13 @@
-<!--Об успешном создании modal-->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+{% verbatim %}
+
+<!--Об успехе modal-->
+<div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
     
         <div class="modal-body">
           <div class="alert alert-success" role="alert">
-            Заявление зарегистрировано
+            {{ modаl_messege }}
           </div>
           
 
@@ -18,4 +20,27 @@
       </div>
     </div>
   </div>
-<!--Об успешном создании modal end-->
+<!--end Об успехе modal--->
+
+<!--Об неуспешной modal-->
+  <div class="modal fade" id="auth_eModal" tabindex="-1" aria-labelledby="auth_eModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+    
+        <div class="modal-body">
+          <div class="alert alert-danger" role="alert">
+            {{ modаl_messege }}
+          </div>
+          
+
+          <div class="d-flex justify-content-center" style="margin-top: 1%;">
+            <button type="button"  class="btn btn-danger" data-bs-dismiss="modal">Закрыть</button>
+            
+          </div>
+        </div>
+    
+      </div>
+    </div>
+  </div>
+<!--end Об неуспешной modal-->
+{% endverbatim %}
