--- a/src/templates/mun_obr/vue/projects_list.html
+++ b/src/templates/mun_obr/vue/projects_list.html
@@ -9,10 +9,10 @@
 
     <ul class="nav nav-tabs" id="myTab2" role="tablist">
         <li class="nav-item">
-          <a class="nav-link active" id="statement_open_tab" data-toggle="tab" href="#statement_open" role="tab" aria-controls="statement_open" aria-selected="true">Home</a>
+          <a class="nav-link active" id="statement_open_tab" data-toggle="tab" href="#statement_open" role="tab" aria-controls="statement_open" aria-selected="true">Заявка</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="contract_tab" data-toggle="tab" href="#contract" role="tab" aria-controls="contract" aria-selected="false">Profile</a>
+          <a class="nav-link" id="contract_tab" data-toggle="tab" href="#contract" role="tab" aria-controls="contract" aria-selected="false">Контракт</a>
         </li>
 
         <li class="nav-item">
