--- a/src/templates/mun_obr/vue/projects_list_tabs/tab3.html
+++ b/src/templates/mun_obr/vue/projects_list_tabs/tab3.html
@@ -11,7 +11,7 @@
 
 <div v-for="(value, key, index) in chat_messeges">
 
-  <div v-if="value.author_id == profile_json.id">
+  <div v-if="value.author_id == profile_json.author_id">
 
 
 
