--- a/src/templates/mun_obr/vue/index.html
+++ b/src/templates/mun_obr/vue/index.html
@@ -76,8 +76,12 @@
                   <button class="nav-link active" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="true">Мой профиль</button>
                   <button class="nav-link" id="v-pills-main-tab" data-bs-toggle="pill" data-bs-target="#v-pills-main" type="button" role="tab" aria-controls="v-pills-main" aria-selected="false" v-on:click="projects">Мои проекты</button>
                   <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Создать письмо</button>
+                  {% endverbatim %}
+
+                  {% if moderator %}
                   <button class="nav-link" id="v-pills-moder-tab" data-bs-toggle="pill" data-bs-target="#v-pills-moder" type="button" role="tab" aria-controls="v-pills-moder" v-on:click="moderator_view" aria-selected="false">Окно модератора</button>
-                 
+                  {% endif %}
+                  {% verbatim %}
                 </div>
            
               
@@ -98,7 +102,7 @@
 
                   </div>
 
-
+                  
                   <div class="tab-pane fade" id="v-pills-moder" role="tabpanel" aria-labelledby="v-pills-moder-tab">
 
                     {% endverbatim %}
