--- a/src/templates/mun_obr/vue/tabs/tab1.html
+++ b/src/templates/mun_obr/vue/tabs/tab1.html
@@ -14,17 +14,17 @@
 
    
   <label for="exampleInputEmail1">Название</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input0" v-model="create_st.title">
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input0" v-model="create_st.title" required>
  
   <label for="exampleInputEmail1">Запрашиваемая сумма гранта, руб.</label>
-  <input type="number" class="form-control" placeholder="Введите данные" value="" id="input1" v-model="create_st.requested_sum">
+  <input type="number" class="form-control" placeholder="Введите данные" value="" id="input1" v-model="create_st.requested_sum" required>
  
   <label for="exampleInputEmail1">Сумма расходов, планируемых к осуществлению в текущем финансовом году на оказание на конкурсной основе поддержки 
     некоммерческим неправительственным организациям в данном субъекте Российской Федерации, на софинансирование которых запрашивается грант, руб.</label>
-  <input type="number" class="form-control" placeholder="Введите данные" value="" id="input2" v-model="create_st.sum_expenses">
+  <input type="number" class="form-control" placeholder="Введите данные" value="" id="input2" v-model="create_st.sum_expenses" required>
  
   <label for="exampleInputEmail1">Источник (источники) финансового обеспечения таких расходов (без учета запрашиваемого гранта)</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input3" v-model="create_st.source">
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input3" v-model="create_st.source" required>
  
   <label for="exampleInputEmail1">Действующие редакции нормативных правовых актов субъекта Российской Федерации и иных документов, регулирующих оказание на конкурсной основе поддержки 
     некоммерческим неправительственным организациям в данном субъекте Российской Федерации.*</label>
@@ -40,17 +40,21 @@
   <label for="exampleInputEmail1">Тип получателя софинансирования</label>
   <input type="text" class="form-control" placeholder="Введите данные" value="" id="input6" v-model="create_st.recipient_type">
 
+  <p class="text-center main_label"><b>Данные организации</b></p> 
+
+  <button type="button" class="btn btn-primary" v-on:click="get_data_from_profile">Заполнить из профиля</button> <br>
+
   <label for="exampleInputEmail1">ОГРН</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input6" v-model="create_st.ogrn">
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="id_ogrn" v-model="create_st.ogrn"  required>
  
   <label for="exampleInputEmail1">Сведения из ЕГРЮЛ</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input7" v-model="create_st.egryl_info">
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input7" v-model="create_st.egryl_info" required>
  
   <label for="exampleInputEmail1">ИНН</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input8" v-model="create_st.inn">
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="id_inn" v-model="create_st.inn" required>
  
   <label for="exampleInputEmail1">КПП</label>
-  <input type="text" class="form-control" placeholder="Введите данные" value="" id="input9" v-model="create_st.kpp">
+  <input type="text" class="form-control" placeholder="Введите данные" value="" id="id_kpp" v-model="create_st.kpp" required>
  
   <label for="exampleInputEmail1">Полное наименование получателя гранта</label>
   <input type="text" class="form-control" placeholder="Введите данные" value="" id="input10" v-model="create_st.full_name_grantee">
@@ -82,8 +86,6 @@
   <label for="exampleInputEmail1">Сумма просроченной задолженности заявителя по возврату средств, полученных из федерального бюджета, руб.</label>
   <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="create_st.d_amount_of_overdue_debt">
 
-  <label for="exampleInputEmail1">Файл</label>
-  <input type="file" class="form-control" placeholder="Введите данные" value="" id="input13" @change="uploadFile" ref="file">
 
   <button class="btn btn-dark pull-right" id="btn_create_statement">Создать письмо</button>
 
