--- a/src/templates/mun_obr/news/modals.html
+++ b/src/templates/mun_obr/news/modals.html
@@ -3,7 +3,7 @@
 <!--Об успехе modal-->
 <div class="modal fade" id="main_Modal" tabindex="-1" style="z-index:1050" aria-labelledby="main_ModalLabel" aria-hidden="true">
 
-    <div class="modal-dialog modal-xl">
+    <div class="modal-dialog modal-xl modal-dialog-centered" >
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">{{selected_news.title}}</h5>
@@ -12,9 +12,12 @@
         <div class="modal-body">
          
         
-            <img :src="base_url + '/media/' + selected_news.img" class="card-img-top" height="400px" alt="...">
+            <img :src="base_url + '/media/' + selected_news.img" class="card-img-top" style="  display: block;margin-left: auto;margin-right: auto;width: 50%;" alt="..."><br>
       
-            <label for="">{{selected_news.content}}</label>
+            <div><label for="">{{selected_news.content}}</label></div>
+
+            <div>{{create_time}}</div>
+
      
   
     
