--- a/src/templates/mun_obr/vue/moderator/tab_statement.html
+++ b/src/templates/mun_obr/vue/moderator/tab_statement.html
@@ -3,73 +3,75 @@
 
    
     <label for="exampleInputEmail1">Название</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input0" v-model="moderator_statement.title">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input0" v-model="moderator_statement.title" disabled>
    
     <label for="exampleInputEmail1">Запрашиваемая сумма гранта, руб.</label>
-    <input type="number" class="form-control" placeholder="Введите данные" value="" id="input1" v-model="moderator_statement.requested_sum">
+    <input type="number" class="form-control" placeholder="Введите данные" value="" id="input1" v-model="moderator_statement.requested_sum"disabled>
    
     <label for="exampleInputEmail1">Сумма расходов, планируемых к осуществлению в текущем финансовом году на оказание на конкурсной основе поддержки 
       некоммерческим неправительственным организациям в данном субъекте Российской Федерации, на софинансирование которых запрашивается грант, руб.</label>
-    <input type="number" class="form-control" placeholder="Введите данные" value="" id="input2" v-model="moderator_statement.sum_expenses">
+    <input type="number" class="form-control" placeholder="Введите данные" value="" id="input2" v-model="moderator_statement.sum_expenses" disabled>
    
     <label for="exampleInputEmail1">Источник (источники) финансового обеспечения таких расходов (без учета запрашиваемого гранта)</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input3" v-model="moderator_statement.source">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input3" v-model="moderator_statement.source" disabled>
    
     <label for="exampleInputEmail1">Действующие редакции нормативных правовых актов субъекта Российской Федерации и иных документов, регулирующих оказание на конкурсной основе поддержки 
       некоммерческим неправительственным организациям в данном субъекте Российской Федерации.*</label>
-      <input type="file" class="form-control" placeholder="Введите данные" value="" id="tab_1_file_1" @change="uploadFile" ref="file">
+
+      
+      <a v-if="moderator_statement.tab_1_file_1 !=''" :href="'http://127.0.0.1:8000/media/'+ moderator_statement.tab_1_file_1">{{moderator_statement.tab_1_file_1}}</a>
     
    
     <label for="exampleInputEmail1">Сайт в сети Интернет, используемый заявителем для размещения информации и документов об оказании на конкурсной основе поддержки социально 
       ориентированным некомемрческим организациям в данном субъекте Российской Федерации.
       С возможностью набора текста, редактирования, удаления, сохранения и восстановления.
       </label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input5" v-model="moderator_statement.link">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input5" v-model="moderator_statement.link" disabled>
    
     <label for="exampleInputEmail1">Тип получателя софинансирования</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input6" v-model="moderator_statement.recipient_type">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input6" v-model="moderator_statement.recipient_type" disabled>
   
     <label for="exampleInputEmail1">ОГРН</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input6" v-model="moderator_statement.ogrn">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input6" v-model="moderator_statement.ogrn" disabled>
    
     <label for="exampleInputEmail1">Сведения из ЕГРЮЛ</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input7" v-model="moderator_statement.egryl_info">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input7" v-model="moderator_statement.egryl_info" disabled>
    
     <label for="exampleInputEmail1">ИНН</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input8" v-model="moderator_statement.inn">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input8" v-model="moderator_statement.inn" disabled>
    
     <label for="exampleInputEmail1">КПП</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input9" v-model="moderator_statement.kpp">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input9" v-model="moderator_statement.kpp" disabled>
    
     <label for="exampleInputEmail1">Полное наименование получателя гранта</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input10" v-model="moderator_statement.full_name_grantee">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input10" v-model="moderator_statement.full_name_grantee" disabled>
   
     <label for="exampleInputEmail1">Сокращенное наименование получателя софинансирования</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input11" v-model="moderator_statement.short_name_grantee">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input11" v-model="moderator_statement.short_name_grantee" disabled>
   
   
     <p class="text-center main_label"><b>Руководитель (органа исполнительной власти/некоммерческой организации)</b></p>
   
     <label for="exampleInputEmail1">Фамилия</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_f_name">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_f_name" disabled>
   
     <label for="exampleInputEmail1">Имя</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_s_name">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_s_name" disabled>
   
     <label for="exampleInputEmail1">Отчество</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_m_name">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_m_name" disabled>
   
     <label for="exampleInputEmail1">Должность руководителя</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_position">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_position" disabled>
   
     <label for="exampleInputEmail1">Контактный номер руководителя</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_phone">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_phone" disabled>
   
     <label for="exampleInputEmail1">Адрес электронной почты для направления юридически значимых сообщений</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_mail">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_mail" disabled>
   
     <label for="exampleInputEmail1">Сумма просроченной задолженности заявителя по возврату средств, полученных из федерального бюджета, руб.</label>
-    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_amount_of_overdue_debt">
+    <input type="text" class="form-control" placeholder="Введите данные" value="" id="input12" v-model="moderator_statement.d_amount_of_overdue_debt" disabled>
 
     <label for="exampleInputEmail1">Статус</label>
     <select class="form-select" aria-label="Default select example" v-model="moderator_statement.status">
@@ -81,8 +83,6 @@
      
     </select>
   
-    <label for="exampleInputEmail1">Файл</label>
-    <input type="file" class="form-control" placeholder="Введите данные" value="" id="input13" @change="uploadFile" ref="file">
 
     <label for="exampleInputEmail1">Комментарий</label>
     <textarea class="form-control" aria-label="With textarea" v-model="moderator_statement.comment"></textarea>
